force-app/main/default/objects/Approval_Audit__c/Approval_Audit__c.object-meta.xml
<CustomObject>
    <description>Audit trail for discount approval decisions.</description>
    <label>Approval Audit</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>