force-app/main/default/objects/Approval_Audit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Approval Audits</relationshipLabel>
    <relationshipName>Approval_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>