force-app/main/default/objects/Approval_Audit__c/fields/Previous_Discount__c.field-meta.xml
<CustomField>
    <fullName>Previous_Discount__c</fullName>
    <label>Previous Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>